Fix overflow-y white space bug

--- a/app/assets/stylesheets/api/pins.scss
+++ b/app/assets/stylesheets/api/pins.scss
@@ -436,7 +436,6 @@
 }
 
 .pin-index#grid-container {
-  position: fixed;
   @media (max-width: 755px) and (min-width: 0px) {
     width: 504px;
   }
