--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@
 
 body {
   position: relative;
-  overflow-y: scroll;
+  // overflow-y: scroll;
 }
 
 input::-ms-clear {
