--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -199,6 +199,12 @@
   }
 }
 
+.home-container.no-scroll {
+  position: fixed;
+  left: 0;
+  right: 0;
+}
+
 #spacer {
   height: 56px;
 }
