--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -19,7 +19,7 @@
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.5);
-  overflow-y: scroll;
+  // overflow-y: scroll;
   box-sizing: border-box;
   &#login,
   &#signup {
